Add tests for extended arrays. Changes based on review.
Signed-off-by: Marnix van Lieshout <marnix.van.lieshout@alliander.com>

--- a/docs/examples/pgm/basic_pgm_examples.ipynb
+++ b/docs/examples/pgm/basic_pgm_examples.ipynb
@@ -159,7 +159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create grid from input data example\n"
+    "## Create grid from input data example\n",
+    "\n",
+    "To create a `Grid` object from `PGM` input data, the `create_grid_from_input_data()` method can be used."
    ]
   },
   {
@@ -168,22 +170,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from power_grid_model_ds.arrays import SourceArray, SymLoadArray, TransformerArray\n",
-    "\n",
     "input_data = core_interface.create_input_from_grid()\n",
     "\n",
-    "array_mapping = {\n",
-    "    \"node\": NodeArray,\n",
-    "    \"line\": LineArray,\n",
-    "    \"sym_load\": SymLoadArray,\n",
-    "    \"source\": SourceArray,\n",
-    "    \"transformer\": TransformerArray,\n",
-    "}\n",
-    "\n",
     "core_interface = PowerGridModelInterface(input_data=input_data)\n",
-    "output = core_interface.create_grid_from_input_data(\n",
-    "    array_mapping=array_mapping,\n",
-    ")\n",
+    "output = core_interface.create_grid_from_input_data()\n",
+    "\n",
     "print(input_data[\"node\"])\n",
     "print(output.node)"
    ]
