fix minor doc typos
Signed-off-by: Martijn Govers <martijn.govers@alliander.com>

--- a/docs/model_interface.ipynb
+++ b/docs/model_interface.ipynb
@@ -87,8 +87,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```py\n",
     "target_line = grid.arrays.line.get(1)\n",
-    "grid.make_active(target_branch_array=target_line)\n"
+    "grid.make_active(target_branch_array=target_line)\n",
+    "```\n"
    ]
   },
   {
