source node -> substation node in from_txt
Signed-off-by: Martijn Govers <Martijn.Govers@Alliander.com>

--- a/docs/examples/utils/grid_from_txt_examples.ipynb
+++ b/docs/examples/utils/grid_from_txt_examples.ipynb
@@ -20,7 +20,7 @@
     "If you follow a specific syntax, you can use the input from the\n",
     "graph editor to transfer your drawing to pgm-ds:\n",
     "\n",
-    "- A _source node_ should be prefixed with `S`\n",
+    "- A _substation node_ should be prefixed with `S`\n",
     "  - e.g: `S1`, `S2`\n",
     "- A _line_ is defined as `<from_node> <to_node>`\n",
     "  - From nodes can be both regular nodes and source nodes\n",
