--- a/docs/quick_start.ipynb
+++ b/docs/quick_start.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "## Analyzing Grid structure\n",
     "\n",
-    "The `Grid` also contains a graph representation which can be used for anayling structure. Such as finding the shortest path between two nodes.\n"
+    "The `Grid` also contains a graph representation which can be used for analyzing structure. Such as finding the shortest path between two nodes.\n"
    ]
   },
   {
