--- a/docs/quick_start.ipynb
+++ b/docs/quick_start.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quick Start\n",
     "\n",
-    "In this quick start we create an extension of the Grid object, generate a random instance of it and perform power flow calculations and modifactions.\n"
+    "In this quick start we create an extension of the Grid object, generate a random instance of it and perform power flow calculations and modifications.\n"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "## Setting up a grid extension\n",
     "\n",
-    "This shows how to add extra values to a `Grid` object. If these are present in the PGM output they will updated after a power flow calculation.\n"
+    "This shows how to add extra values to a `Grid` object. If these are present in the PGM output they will be updated after a power flow calculation.\n"
    ]
   },
   {
