--- a/docs/model_interface.ipynb
+++ b/docs/model_interface.ipynb
@@ -265,7 +265,8 @@
    "outputs": [],
    "source": [
     "all_paths = grid.graphs.active_graph.get_all_paths(56, 41)\n",
-    "components = grid.graphs.active_graph.get_components()\n",
+    "with grid.graphs.active_graph.tmp_remove_nodes([1, 2, 3]):\n",
+    "    components = grid.graphs.active_graph.get_components()\n",
     "connected = grid.graphs.active_graph.get_connected(node_id=56)"
    ]
   }
