generator_examples.ipynb
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/docs/examples/generators/generator_examples.ipynb
+++ b/docs/examples/generators/generator_examples.ipynb
@@ -140,14 +140,14 @@
     "# Setup initial nodes and sources\n",
     "grid = Grid.empty()\n",
     "nodes = NodeArray.zeros(4)\n",
-    "nodes.id = [0, 1, 2, 3]\n",
-    "nodes.u_rated = [10_500] * 4\n",
+    "nodes[\"id\"] = [0, 1, 2, 3]\n",
+    "nodes[\"u_rated\"] = [10_500] * 4\n",
     "\n",
     "sources = SourceArray.zeros(1)\n",
-    "sources.id = [4]\n",
-    "sources.node = [0]\n",
-    "sources.status = [1]\n",
-    "sources.u_ref = [1]\n",
+    "sources[\"id\"] = [4]\n",
+    "sources[\"node\"] = [0]\n",
+    "sources[\"status\"] = [1]\n",
+    "sources[\"u_ref\"] = [1]\n",
     "\n",
     "grid.append(nodes)\n",
     "grid.append(sources)\n",
