--- a/docs/demos/connecting_new_consumer.ipynb
+++ b/docs/demos/connecting_new_consumer.ipynb
@@ -73,8 +73,8 @@
     "\n",
     "grid.set_feeder_ids()\n",
     "\n",
-    "grid.node.x_coor = np.random.uniform(100, 500, len(grid.node))\n",
-    "grid.node.y_coor = np.random.uniform(100, 500, len(grid.node))"
+    "grid.node[\"x_coor\"] = np.random.uniform(100, 500, len(grid.node))\n",
+    "grid.node[\"y_coor\"] = np.random.uniform(100, 500, len(grid.node))"
    ]
   },
   {
@@ -149,24 +149,26 @@
     "):\n",
     "    closest_node_idx = find_closest_node(\n",
     "        grid=grid,\n",
-    "        x=new_consumer.x_coor[0],\n",
-    "        y=new_consumer.y_coor[0],\n",
+    "        x=new_consumer[\"x_coor\"].item(),\n",
+    "        y=new_consumer[\"y_coor\"].item(),\n",
     "    )\n",
     "    closest_node = grid.node[closest_node_idx]\n",
     "\n",
     "    grid.append(new_consumer)\n",
-    "    new_consumer_load.node = new_consumer.id\n",
+    "    new_consumer_load[\"node\"] = new_consumer[\"id\"]\n",
     "    grid.append(new_consumer_load)\n",
     "\n",
-    "    dist = np.sqrt((closest_node.x_coor - new_consumer.x_coor) ** 2 + (closest_node.y_coor - new_consumer.y_coor) ** 2)\n",
+    "    distance = np.sqrt(\n",
+    "        (closest_node[\"x_coor\"] - new_consumer[\"x_coor\"]) ** 2 + (closest_node[\"y_coor\"] - new_consumer[\"y_coor\"]) ** 2\n",
+    "    )\n",
     "\n",
     "    new_line = ExtendedLineArray(\n",
     "        from_node=[closest_node.id],\n",
     "        to_node=[new_consumer.id],\n",
     "        from_status=[1],\n",
     "        to_status=[1],\n",
-    "        r1=[R_PER_KM * dist / 1_000],\n",
-    "        x1=[X_PER_KM * dist / 1_000],\n",
+    "        r1=[R_PER_KM * distance / 1_000],\n",
+    "        x1=[X_PER_KM * distance / 1_000],\n",
     "        c1=[0],\n",
     "        tan1=[0],\n",
     "        i_n=[200],\n",
@@ -231,8 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Overloaded nodes: {grid.node[grid.node.is_overloaded].id}\")\n",
-    "print(f\"Overloaded lines: {grid.line[grid.line.is_overloaded].id}\")"
+    "print(f\"Overloaded nodes: {grid.node[grid.node.is_overloaded]['id']}\")\n",
+    "print(f\"Overloaded lines: {grid.line[grid.line.is_overloaded]['id']}\")"
    ]
   },
   {
@@ -255,8 +257,8 @@
     "    connect_new_consumer(grid, new_consumer, new_consumer_load)\n",
     "update_grid(grid)\n",
     "\n",
-    "print(f\"Overloaded nodes: {grid.node[grid.node.is_overloaded].id}\")\n",
-    "print(f\"Overloaded lines: {grid.line[grid.line.is_overloaded].id}\")"
+    "print(f\"Overloaded nodes: {grid.node[grid.node.is_overloaded]['id']}\")\n",
+    "print(f\"Overloaded lines: {grid.line[grid.line.is_overloaded]['id']}\")"
    ]
   }
  ],
