--- a/docs/examples/model/array_examples.ipynb
+++ b/docs/examples/model/array_examples.ipynb
@@ -67,6 +67,7 @@
    "source": [
     "# Accessing a single column\n",
     "id_column = fancy_array[\"id\"]\n",
+    "# Alternative syntax (not recommended: not type-safe)\n",
     "id_column = fancy_array.id\n",
     "\n",
     "# Accessing multiple columns\n",
@@ -89,12 +90,14 @@
    "outputs": [],
    "source": [
     "# Setting new values to a column\n",
-    "fancy_array.id = np.array([9, 9, 9])\n",
     "fancy_array[\"id\"] = np.array([9, 9, 9])\n",
-    "fancy_array.id = [9, 9, 9]\n",
     "fancy_array[\"id\"] = [9, 9, 9]\n",
-    "fancy_array.id = 9\n",
-    "fancy_array[\"id\"] = 9"
+    "fancy_array[\"id\"] = 9\n",
+    "\n",
+    "# Alternative syntax (not recommended: not type-safe)\n",
+    "fancy_array.id = np.array([9, 9, 9])\n",
+    "fancy_array.id = [9, 9, 9]\n",
+    "fancy_array.id = 9"
    ]
   },
   {
@@ -176,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Example analysis: sum of a column\n",
-    "total = np.sum(fancy_array.test_int)"
+    "total = np.sum(fancy_array[\"test_int\"])"
    ]
   },
   {
