--- a/docs/examples/model/grid_examples.ipynb
+++ b/docs/examples/model/grid_examples.ipynb
@@ -107,13 +107,13 @@
    "source": [
     "from power_grid_model_ds.arrays import TransformerArray\n",
     "\n",
-    "trafo = TransformerArray.empty(1)\n",
-    "trafo.id = 301\n",
-    "trafo.from_status = 1\n",
-    "trafo.to_status = 1\n",
-    "trafo.from_node = 102\n",
-    "trafo.to_node = 106\n",
-    "grid.append(trafo, check_max_id=False)"
+    "transformer = TransformerArray.empty(1)\n",
+    "transformer[\"id\"] = 301\n",
+    "transformer[\"from_status\"] = 1\n",
+    "transformer[\"to_status\"] = 1\n",
+    "transformer[\"from_node\"] = 102\n",
+    "transformer[\"to_node\"] = 106\n",
+    "grid.append(transformer, check_max_id=False)"
    ]
   },
   {
@@ -284,8 +284,8 @@
     "from power_grid_model_ds.arrays import LineArray\n",
     "\n",
     "new_line_array = LineArray.zeros(1)\n",
-    "new_line_array.from_node = 102\n",
-    "new_line_array.to_node = 105\n",
+    "new_line_array[\"from_node\"] = 102\n",
+    "new_line_array[\"to_node\"] = 105\n",
     "grid.add_branch(branch=new_line_array)"
    ]
   },
@@ -330,8 +330,8 @@
     "from power_grid_model_ds.arrays import LinkArray\n",
     "\n",
     "new_link_array = LinkArray.zeros(1)\n",
-    "new_link_array.from_node = 102\n",
-    "new_link_array.to_node = 105\n",
+    "new_link_array[\"from_node\"] = 102\n",
+    "new_link_array[\"to_node\"] = 105\n",
     "grid.add_branch(branch=new_link_array)"
    ]
   },
@@ -355,8 +355,8 @@
     "from power_grid_model_ds.arrays import TransformerArray\n",
     "\n",
     "new_transformer_array = TransformerArray.zeros(1)\n",
-    "new_transformer_array.from_node = 102\n",
-    "new_transformer_array.to_node = 105\n",
+    "new_transformer_array[\"from_node\"] = 102\n",
+    "new_transformer_array[\"to_node\"] = 105\n",
     "grid.add_branch(branch=new_transformer_array)"
    ]
   },
