--- a/docs/model_interface.ipynb
+++ b/docs/model_interface.ipynb
@@ -71,8 +71,8 @@
     "from power_grid_model_ds.arrays import LineArray\n",
     "\n",
     "new_line_array = LineArray.zeros(1)\n",
-    "new_line_array.from_node = 2\n",
-    "new_line_array.to_node = 5\n",
+    "new_line_array[\"from_node\"] = 2\n",
+    "new_line_array[\"to_node\"] = 5\n",
     "grid.add_branch(branch=new_line_array)"
    ]
   },
