feat: support all component types in interface
Signed-off-by: Vincent Koppen <vincent.koppen@alliander.com>

--- a/docs/demos/connecting_new_consumer.ipynb
+++ b/docs/demos/connecting_new_consumer.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from power_grid_model_ds._core.load_flow import PowerGridModelInterface\n",
+    "from power_grid_model_ds import PowerGridModelInterface\n",
     "\n",
     "R_PER_KM = 0.1\n",
     "X_PER_KM = 0.1\n",
