--- a/docs/examples/generators/generator_examples.ipynb
+++ b/docs/examples/generators/generator_examples.ipynb
@@ -17,9 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 102\n",
+      "Number of sources: 2\n",
+      "Number of loads: 100\n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import Grid\n",
     "from power_grid_model_ds.generators import RadialGridGenerator\n",
@@ -45,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of transformers: 2\n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import Grid\n",
     "from power_grid_model_ds.generators import RadialGridGenerator\n",
@@ -71,9 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated nodes: \n",
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id \n",
+      " 1  | 10500.0 |     0     |        0         |       0        \n",
+      " 2  | 10500.0 |     0     |        0         |       0        \n",
+      "Low load scenarios: \n",
+      " id | node | status | type | p_specified | q_specified \n",
+      " 3  |  1   |   1    |  0   |   218860.0  |   29606.0   \n",
+      " 4  |  2   |   1    |  0   |   180184.0  |   21574.0   \n",
+      "High load scenarios: \n",
+      " id | node | status | type | p_specified | q_specified \n",
+      " 5  |  1   |   1    |  0   |  -287484.0  |   40640.0   \n",
+      " 6  |  2   |   1    |  0   |   26558.0   |   28148.0   \n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import Grid\n",
     "from power_grid_model_ds.arrays import NodeArray\n",
@@ -101,9 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated nodes: \n",
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id \n",
+      " 1  | 10500.0 |     1     |   -2147483648    |  -2147483648   \n",
+      "Generated sources: \n",
+      " id | node | status | u_ref \n",
+      " 2  |  1   |   1    |  1.0  \n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import Grid\n",
     "from power_grid_model_ds.arrays import SourceArray\n",
@@ -130,9 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated lines: \n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n   \n",
+      " 5  |     0     |    3    |      1      |     1     |        0         |       0        |   False   |0.003..|4.538..| 0.0 | 0.0  |303.919..\n",
+      " 6  |     0     |    2    |      1      |     1     |        0         |       0        |   False   |0.134..|0.015..| 0.0 | 0.0  |425.988..\n",
+      " 7  |     3     |    1    |      1      |     1     |        0         |       0        |   False   |1.211..|0.065..| 0.0 | 0.0  |663.357..\n",
+      " 8  |     0     |    2    |      1      |     0     |        0         |       0        |   False   |0.629..|0.006..| 0.0 | 0.0  |313.880..\n",
+      " 9  |     3     |    2    |      1      |     0     |        0         |       0        |   False   |0.070..|0.029..| 0.0 | 0.0  |269.786..\n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import Grid\n",
     "from power_grid_model_ds.generators import LineGenerator\n",
@@ -173,9 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated routes: \n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |  i_n   \n",
+      " 5  |     0     |    3    |      1      |     1     |        0         |       0        |   False   |0.347..|0.008..| 0.0 | 0.0  |306.03..\n",
+      " 6  |     0     |    1    |      1      |     1     |        0         |       0        |   False   |0.082..|0.037..| 0.0 | 0.0  |254.90..\n"
+     ]
+    }
+   ],
    "source": [
     "# Create routes\n",
     "line_generator.create_routes(2)\n",
@@ -195,9 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected nodes: [0, 1, 3]\n",
+      "Unconnected nodes: [2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect unconnected nodes\n",
     "line_generator.set_unconnected_nodes()\n",
@@ -219,9 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated NOP lines: \n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n   \n",
+      " 5  |     0     |    3    |      1      |     1     |        0         |       0        |   False   |0.347..|0.008..| 0.0 | 0.0  |306.039..\n",
+      " 6  |     0     |    1    |      1      |     1     |        0         |       0        |   False   |0.082..|0.037..| 0.0 | 0.0  |254.909..\n",
+      " 7  |     0     |    2    |      1      |     1     |        0         |       0        |   False   |0.064..|0.004..| 0.0 | 0.0  |445.042..\n",
+      " 8  |     1     |    2    |      1      |     0     |        0         |       0        |   False   |0.209..|0.024..| 0.0 | 0.0  |270.937..\n"
+     ]
+    }
+   ],
    "source": [
     "# Create normally open points\n",
     "line_generator.create_nop_lines(1)\n",
@@ -233,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
