--- a/docs/examples/model/graph_examples.ipynb
+++ b/docs/examples/model/graph_examples.ipynb
@@ -84,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortest path: [1, 2, 3], Length: 2\n"
+     ]
+    }
+   ],
    "source": [
     "graph = RustworkxGraphModel()\n",
     "\n",
@@ -116,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All paths from 1 to 3: [[1, 2, 3], [1, 5, 4, 3]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Retrieving all paths from node 1 to node 3\n",
     "paths = graph.get_all_paths(1, 3)\n",
@@ -136,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected components: [[2, 3, 4, 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -149,7 +173,8 @@
     "graph.add_branch(5, 4)\n",
     "\n",
     "substation_nodes = np.array([1])\n",
-    "components = graph.get_components(substation_nodes=substation_nodes)\n",
+    "with graph.tmp_remove_nodes(substation_nodes):\n",
+    "    components = graph.get_components()\n",
     "print(f\"Connected components: {components}\")"
    ]
   },
@@ -164,9 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes connected to 1: [5, 2, 4, 3]\n",
+      "Nodes connected to 1 (inclusive): [1, 5, 2, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting nodes connected to node 1, exclusive of node 1\n",
     "connected_nodes = graph.get_connected(node_id=1)\n",
@@ -180,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
