--- a/docs/examples/model/grid_extensions_examples.ipynb
+++ b/docs/examples/model/grid_extensions_examples.ipynb
@@ -83,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExtendedGrid(_id_counter=0, graphs=GraphContainer(active_graph=<power_grid_model_ds._core.model.graphs.models.rustworkx.RustworkxGraphModel object at 0x000001E33EBC27B0>, complete_graph=<power_grid_model_ds._core.model.graphs.models.rustworkx.RustworkxGraphModel object at 0x000001E33EC182D0>), node=ExtendedNodeArray([[]]), transformer=TransformerArray([[]]), three_winding_transformer=ThreeWindingTransformerArray([[]]), line=ExtendedLineArray([[]]), link=LinkArray([[]]), source=SourceArray([[]]), sym_load=SymLoadArray([[]]), sym_gen=SymGenArray([[]]), transformer_tap_regulator=TransformerTapRegulatorArray([[]]), sym_power_sensor=SymPowerSensorArray([[]]), sym_voltage_sensor=SymVoltageSensorArray([[]]), asym_voltage_sensor=AsymVoltageSensorArray([[]]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ExtendedGrid.empty()"
    ]
@@ -93,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
