--- a/docs/examples/utils/grid_from_txt_examples.ipynb
+++ b/docs/examples/utils/grid_from_txt_examples.ipynb
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
