--- a/docs/model_interface.ipynb
+++ b/docs/model_interface.ipynb
@@ -273,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
