--- a/docs/quick_start.ipynb
+++ b/docs/quick_start.ipynb
@@ -92,9 +92,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id |  u  \n",
+      " 1  | 10500.0 |     0     |        22        |       16       | 0.0 \n",
+      " 2  | 10500.0 |     0     |        18        |       16       | 0.0 \n",
+      " 3  | 10500.0 |     0     |        18        |       16       | 0.0 \n",
+      " 4  | 10500.0 |     0     |        18        |       16       | 0.0 \n",
+      " 5  | 10500.0 |     0     |        18        |       16       | 0.0 \n",
+      " 16 | 10500.0 |     1     |   -2147483648    |  -2147483648   | 0.0 \n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n    | i_from \n",
+      " 18 |     16    |    5    |      1      |     1     |        18        |       16       |    True   |0.003..|4.538..| 0.0 | 0.0  |303.9194..|  0.0   \n",
+      " 19 |     5     |    3    |      1      |     1     |        18        |       16       |   False   |0.134..|0.015..| 0.0 | 0.0  |425.9880..|  0.0   \n",
+      " 20 |     5     |    4    |      1      |     1     |        18        |       16       |   False   |0.657..|2.575..| 0.0 | 0.0  |1311.550..|  0.0   \n",
+      " 21 |     4     |    2    |      1      |     1     |        18        |       16       |   False   |0.213..|0.016..| 0.0 | 0.0  |114.4995..|  0.0   \n",
+      " 22 |     16    |    1    |      1      |     1     |        22        |       16       |    True   |0.070..|0.006..| 0.0 | 0.0  |729.9817..|  0.0   \n"
+     ]
+    }
+   ],
    "source": [
     "grid.set_feeder_ids()\n",
     "print(grid.node)\n",
@@ -112,9 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id |     u     \n",
+      " 1  | 10500.0 |     0     |        22        |       16       |10502.405..\n",
+      " 2  | 10500.0 |     0     |        18        |       16       |10519.046..\n",
+      " 3  | 10500.0 |     0     |        18        |       16       |10512.620..\n",
+      " 4  | 10500.0 |     0     |        18        |       16       |10517.268..\n",
+      " 5  | 10500.0 |     0     |        18        |       16       |10500.888..\n",
+      " 16 | 10500.0 |     1     |   -2147483648    |  -2147483648   |10500.242..\n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n    | i_from \n",
+      " 18 |     16    |    5    |      1      |     1     |        18        |       16       |    True   |0.003..|4.538..| 0.0 | 0.0  |303.9194..|94.045..\n",
+      " 19 |     5     |    3    |      1      |     1     |        18        |       16       |   False   |0.134..|0.015..| 0.0 | 0.0  |425.9880..|50.191..\n",
+      " 20 |     5     |    4    |      1      |     1     |        18        |       16       |   False   |0.657..|2.575..| 0.0 | 0.0  |1311.550..|14.410..\n",
+      " 21 |     4     |    2    |      1      |     1     |        18        |       16       |   False   |0.213..|0.016..| 0.0 | 0.0  |114.4995..|4.8767..\n",
+      " 22 |     16    |    1    |      1      |     1     |        22        |       16       |    True   |0.070..|0.006..| 0.0 | 0.0  |729.9817..|17.570..\n"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds import PowerGridModelInterface\n",
     "\n",
@@ -184,9 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id |     u     \n",
+      " 1  | 10500.0 |     0     |        22        |       16       |10508.537..\n",
+      " 2  | 10500.0 |     0     |        18        |       16       |10518.700..\n",
+      " 3  | 10500.0 |     0     |        22        |       16       |10560.743..\n",
+      " 4  | 10500.0 |     0     |        18        |       16       |10516.922..\n",
+      " 5  | 10500.0 |     0     |        18        |       16       |10500.541..\n",
+      " 16 | 10500.0 |     1     |   -2147483648    |  -2147483648   |10500.240..\n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n    | i_from \n",
+      " 18 |     16    |    5    |      1      |     1     |        18        |       16       |    True   |0.003..|4.538..| 0.0 | 0.0  |303.9194..|43.872..\n",
+      " 19 |     5     |    3    |      1      |     0     |   -2147483648    |  -2147483648   |   False   |0.134..|0.015..| 0.0 | 0.0  |425.9880..|  0.0   \n",
+      " 20 |     5     |    4    |      1      |     1     |        18        |       16       |   False   |0.657..|2.575..| 0.0 | 0.0  |1311.550..|14.410..\n",
+      " 21 |     4     |    2    |      1      |     1     |        18        |       16       |   False   |0.213..|0.016..| 0.0 | 0.0  |114.4995..|4.8769..\n",
+      " 22 |     16    |    1    |      1      |     1     |        22        |       16       |    True   |0.070..|0.006..| 0.0 | 0.0  |729.9817..|67.481..\n",
+      " 23 |     3     |    1    |      1      |     1     |        22        |       16       |   False   |  0.6  |  0.2  | 0.0 | 0.0  |  100.0   |49.962..\n"
+     ]
+    }
+   ],
    "source": [
     "print(grid.node)\n",
     "print(grid.line)"
@@ -203,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortest path: [1, 16, 5, 4], Length: 3\n"
+     ]
+    }
+   ],
    "source": [
     "path, length = grid.graphs.active_graph.get_shortest_path(1, 4)\n",
     "print(f\"Shortest path: {path}, Length: {length}\")"
@@ -214,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
