--- a/docs/examples/utils/grid_from_txt_examples.ipynb
+++ b/docs/examples/utils/grid_from_txt_examples.ipynb
@@ -53,7 +53,7 @@
     "3 6 transformer\n",
     "5 7\n",
     "7 8\n",
-    "8 9\n",
+    "8 9 generic_branch\n",
     "```\n",
     "\n",
     "Then, using python's `pathlib` module, navigate to your file and load your grid\n"
@@ -98,7 +98,7 @@
     "    \"3 6 transformer\",\n",
     "    \"5 7\",\n",
     "    \"7 8\",\n",
-    "    \"8 9\",\n",
+    "    \"8 9 generic_branch\",\n",
     ")"
    ]
   },
@@ -118,7 +118,7 @@
       "3 5 13\n",
       "5 7 15\n",
       "7 8 16\n",
-      "8 9 17\n",
+      "8 9 17,generic_branch\n",
       "\n"
      ]
     }
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv (3.12.6)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
