--- a/docs/examples/utils/grid_serialization_examples.ipynb
+++ b/docs/examples/utils/grid_serialization_examples.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "from power_grid_model_ds import Grid\n",
-    "from power_grid_model_ds.arrays import LineArray, NodeArray, SymLoadArray, SourceArray\n",
+    "from power_grid_model_ds.arrays import LineArray, NodeArray, SourceArray, SymLoadArray\n",
     "from power_grid_model_ds.enums import NodeType\n",
     "\n",
     "grid = Grid.empty()\n",
