docs: add serialization docs
Signed-off-by: jaapschoutenalliander <jaap.schouten@alliander.com>

--- a/docs/examples/utils/grid_serialization_examples.ipynb
+++ b/docs/examples/utils/grid_serialization_examples.ipynb
@@ -125,6 +125,44 @@
     "\n",
     "workspace.cleanup()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df87cd99",
+   "metadata": {},
+   "source": [
+    "## PGM Compatibility\n",
+    "\n",
+    "Use `PowerGridModelInterface` when you need JSON that the core `power-grid-model` solver accepts directly. The sequence is simple: create the solver payload from your grid, dump it with `json_serialize_to_file()`, reload it back into a `Grid`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e404e517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "from power_grid_model.utils import json_serialize_to_file\n",
+    "from power_grid_model_ds import PowerGridModelInterface\n",
+    "\n",
+    "compat_workspace = TemporaryDirectory()\n",
+    "pgm_path = Path(compat_workspace.name) / \"pgm_input.json\"\n",
+    "\n",
+    "pgm_payload = PowerGridModelInterface(grid).create_input_from_grid()\n",
+    "\n",
+    "# Note: replace NaN values before serializing, otherwise json_serialize_to_file will drop those columns entirely.\n",
+    "json_serialize_to_file(pgm_path, pgm_payload)\n",
+    "\n",
+    "restored_grid = Grid.deserialize(pgm_path)\n",
+    "restored_payload = PowerGridModelInterface(restored_grid).create_input_from_grid()\n",
+    "\n",
+    "compat_workspace.cleanup()"
+   ]
   }
  ],
  "metadata": {
