Update description in grid serialization example
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/docs/examples/utils/grid_serialization_examples.ipynb
+++ b/docs/examples/utils/grid_serialization_examples.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "## Deserialize and Validate\n",
     "\n",
-    "Rehydrate the JSON with `Grid.deserialize()` and compare it with the in-memory object to verify that every array survived the round trip.\n"
+    "Load the JSON as a Grid with `Grid.deserialize()` and compare it with the in-memory object to verify that every array survived the round trip.\n"
    ]
   },
   {
