--- a/docs/examples/utils/grid_serialization_examples.ipynb
+++ b/docs/examples/utils/grid_serialization_examples.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "reloaded_grid = Grid.deserialize(json_path)\n",
     "\n",
-    "print(f\"Arrays identical: {reloaded_grid == grid}\")\n",
+    "print(f\"Grids identical: {reloaded_grid == grid}\")\n",
     "print(f\"Nodes restored: {reloaded_grid.node.size}\")\n",
     "print(f\"Serialized file: {json_path}\")\n",
     "\n",
