docs: remove strict from API documentation in notebook
Signed-off-by: jaapschoutenalliander <jaap.schouten@alliander.com>

--- a/docs/examples/utils/grid_serialization_examples.ipynb
+++ b/docs/examples/utils/grid_serialization_examples.ipynb
@@ -78,8 +78,7 @@
    "source": [
     "## Serialize to JSON\n",
     "\n",
-    "Use `Grid.serialize()` to dump the container. All JSON settings (indentation, ordering, ASCII handling, etc.) can be forwarded to `json.dump`.\n",
-    "Set `strict=False` if you add custom, non-serializable attributes and want to skip them instead of raising.\n"
+    "Use `Grid.serialize()` to dump the container. All JSON settings (indentation, ordering, ASCII handling, etc.) can be forwarded to `json.dump`."
    ]
   },
   {
