--- a/docs/examples/model/grid_extensions_examples.ipynb
+++ b/docs/examples/model/grid_extensions_examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,36 +49,7 @@
    "source": [
     "## Adding the new arrays to the Grid\n",
     "\n",
-    "When these arrays have been defined they should also be provided to the Grid object.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataclasses import dataclass\n",
-    "\n",
-    "from power_grid_model_ds import GraphContainer, Grid\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class ExtendedGrid(Grid):\n",
-    "    \"\"\"\n",
-    "    This is my own grid to extend.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    node: ExtendedNodeArray\n",
-    "    line: ExtendedLineArray\n",
-    "    graphs: GraphContainer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create a grid with this array container\n"
+    "With the arrays in place, the recommended path is to let `grid_extension_factory` wire them into a tailor-made `Grid` subclass. This avoids hand-written containers and keeps the example aligned with the implementation shipped in power-grid-model-ds."
    ]
   },
   {
@@ -87,13 +58,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ExtendedGrid.empty()"
+    "from power_grid_model_ds._core.model.grids.factory import grid_extension_factory\n",
+    "\n",
+    "ExtendedGrid, extended_grid = grid_extension_factory(\n",
+    "    name=\"ExtendedGrid\",\n",
+    "    user_arrays={\n",
+    "        \"node\": ExtendedNodeArray,\n",
+    "        \"line\": ExtendedLineArray,\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "ExtendedGrid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create and inspect a grid instance\n",
+    "\n",
+    "The factory call already gives you an initialized grid that is ready for use. Inspecting it confirms the telemetry columns are available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extended_grid\n",
+    "\n",
+    "list(extended_grid.node.columns), list(extended_grid.line.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding metadata fields\n",
+    "\n",
+    "Besides arrays, you can inject simple dataclass fields (strings, numbers, config blobs) via `user_fields`. Provide a `(type, default)` tuple for each entry and the factory wires them into the generated grid class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import field\n",
+    "\n",
+    "MetaGrid, meta_grid = grid_extension_factory(\n",
+    "    name=\"MetaGrid\",\n",
+    "    user_arrays={\n",
+    "        \"node\": ExtendedNodeArray,\n",
+    "        \"line\": ExtendedLineArray,\n",
+    "    },\n",
+    "    user_fields={\n",
+    "        \"owner\": (str, \"DSO\"),\n",
+    "        \"tags\": (list[str], field(default_factory=list)),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "meta_grid.owner, meta_grid.tags"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.6)",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
